// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component with no flag code given along. 1`] = `
<div
  className="flag size-l border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/NL.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large Belgium flag with a real-circular gradient 1`] = `
<div
  className="flag real-circular size-l border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/BE.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large Belgium flag with a real-linear gradient 1`] = `
<div
  className="flag real-linear size-l border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/BE.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large Belgium flag with a top-down gradient 1`] = `
<div
  className="flag top-down size-l border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/BE.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large Belgium flag without a border. 1`] = `
<div
  className="flag size-l border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/BE.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large Italian flag with a 10px border radius. 1`] = `
<div
  className="flag size-l border-radius undefined"
  style={
    Object {
      "borderRadius": "10px",
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/IT.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large Italian flag with a border. 1`] = `
<div
  className="flag size-l border border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/IT.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large Italian flag with no border radius 1`] = `
<div
  className="flag size-l undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/IT.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large US flag with a custom classname 1`] = `
<div
  className="flag size-l border-radius custom-flag-class"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/US.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large US flag with drop shadow 1`] = `
<div
  className="flag size-l dropshadow border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/US.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a large dutch flag 1`] = `
<div
  className="flag size-l border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/l/NL.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a medium dutch flag 1`] = `
<div
  className="flag size-m border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/m/NL.svg?sanitize=true"
  />
</div>
`;

exports[`Should render a small dutch flag 1`] = `
<div
  className="flag size-s border-radius undefined"
  style={
    Object {
      "borderRadius": undefined,
    }
  }
>
  <img
    src="https://raw.githubusercontent.com/Yummygum/flag-pack-core/master/svg/s/NL.svg?sanitize=true"
  />
</div>
`;
